# succinct-takehome

./: .gitmodules  Cargo.toml  example_output.md
contracts/: deploy.sh  remappings.txt
contracts/src/: Fibonacci.sol  SP1AggregationVerifier.sol
contracts/src/fixtures/: plonk-fixture-0x5cc3a8caeb999f2de536212286cff0c996bdac9ae88c226eccb834a139098c1a.json  plonk-fixture-0xf8a0fce9a474fa829190fe9ee7ef1fb50465f1e82c322ddc1f155bdeacee9dd3.json
lib/: Cargo.toml
lib/src/: lib.rs  merkletree.rs
program/: Cargo.toml
program/src/: main.rs
script/: Cargo.toml  build.rs
script/elf/: riscv32im-succinct-zkvm-elf
