[package]
version = "0.1.0"
name = "aggregation-program"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true }
sp1-zkvm = { version = "3.0.0", features = ["verify"] }
alloy-merkle-tree = { git = "https://github.com/rkdud007/alloy-merkle-tree.git" }
alloy-primitives = "0.8.12"
sha2 = "0.10.8"
tiny-keccak = "2.0.2"
