[package]
version = "0.1.0"
name = "aggregation-program"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true }
alloy-merkle-tree = { git = "https://github.com/rkdud007/alloy-merkle-tree.git" }
alloy-primitives = "0.8.12"
sha2 = "0.10.8"
tiny-keccak = "2.0.2"
sp1-lib = "=3.0.0"
sp1-zkvm = { version = "=3.0.0", features = ["verify"] }
sp1-primitives = "=3.0.0"
