[package]
version = "0.1.0"
name = "aggregation-program"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true }
alloy-primitives.workspace = true
sha2 = "0.10.8"
sp1-lib.workspace = true
sp1-zkvm.workspace = true
sp1-primitives.workspace = true
aggregation-lib = { path = "../lib" }
