[package]
version = "0.1.0"
name = "aggregation-script"
edition = "2021"
default-run = "aggregation"

[[bin]]
name = "aggregation"
path = "src/bin/main.rs"

[[bin]]
name = "evm"
path = "src/bin/evm.rs"

[dependencies]
sp1-sdk = "3.0.0"
alloy-primitives = "0.8.12"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
alloy-sol-types = { workspace = true }
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15.0"
futures = "0.3"
anyhow = "1.0.40"

[build-dependencies]
sp1-helper = "3.0.0"
